--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,12 @@
 buildscript {
-    ext.kotlinVersion = '1.3.31'
+    ext.kotlinVersion = '1.4.21'
     ext.navigationVersion = "2.1.0-alpha06"
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.1'
+        classpath 'com.android.tools.build:gradle:7.0.0-alpha04'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigationVersion"
 
@@ -30,9 +30,9 @@ task clean(type: Delete) {
 ext {
     // Sdk and tools
     // Support library and architecture components support minSdk 14 and above.
-    minSdkVersion = 14
-    targetSdkVersion = 28
-    compileSdkVersion = 28
+    minSdkVersion = 23
+    targetSdkVersion = 30
+    compileSdkVersion = 30
 
     // App dependencies
     androidXVersion = '1.0.0'
