Added test for livedata

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,15 @@ dependencies {
     androidTestImplementation "androidx.test.ext:junit:$androidXTestExtKotlinRunnerVersion"
     androidTestImplementation "androidx.test.espresso:espresso-core:$espressoVersion"
 
+    // AndroidX local Test
+    testImplementation "androidx.test.ext:junit-ktx:$androidXTestExtKotlinRunnerVersion"
+    testImplementation "androidx.test:core-ktx:$androidXTestCoreVersion"
+
+    // AndroidX Arc testing
+    testImplementation "androidx.arch.core:core-testing:$archTestingVersion"
+
+    // Robolectric
+    testImplementation "org.robolectric:robolectric:$robolectricVersion"
     // Kotlin
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlinVersion"
     implementation "androidx.fragment:fragment-ktx:$fragmentKtxVersion"
